# robot-photographer

./: README.md
doc/html/: _app_8xaml_8cs_source.html  _assembly_info_8cs_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _display_t_c_p_client_8cs_source.html  _main_page_8xaml_8cs_source.html  _message_page_8xaml_8cs_source.html  annotated.html  annotated.js  autonomous__photography_8cpp_source.html  autonomous__photography_8hpp_source.html  autonomous__photography__state_8h_source.html  bayesian__skin__classifier_8cpp_source.html  bayesian__skin__classifier_8hpp_source.html  camera_8cpp_source.html  camera_8hpp_source.html  camera__calibration_8cpp_source.html  catkin__generated_2installspace_2__setup__util_8py_source.html  class_g_photo2_handler-members.html  class_g_photo2_handler.html  class_g_photo2_handler.js  class_r_p_autonomous_photography_node-members.html  class_r_p_autonomous_photography_node.html  class_r_p_autonomous_photography_node.js  class_r_p_bayesian_skin_classifier-members.html  class_r_p_bayesian_skin_classifier.html  class_r_p_bayesian_skin_classifier.js  class_r_p_camera_node-members.html  class_r_p_camera_node.html  class_r_p_camera_node.js  class_r_p_camera_node__coll__graph.map  class_r_p_camera_node__coll__graph.md5  class_r_p_color_face_detector-members.html  class_r_p_color_face_detector.html  class_r_p_color_face_detector.js  class_r_p_color_image_processor-members.html  class_r_p_color_image_processor.html  class_r_p_color_image_processor.js  class_r_p_depth_head_detector-members.html  class_r_p_depth_head_detector.html  (+258 more)
doc/latex/: annotated.tex  class_g_photo2_handler.tex  class_r_p_autonomous_photography_node.tex  class_r_p_bayesian_skin_classifier.tex  class_r_p_camera_node.tex  class_r_p_camera_node__coll__graph.md5  class_r_p_color_face_detector.tex  class_r_p_color_image_processor.tex  class_r_p_depth_head_detector.tex  class_r_p_depth_head_tracker.tex  class_r_p_depth_image_processor.tex  class_r_p_display_1_1_app.tex  class_r_p_display_1_1_display_t_c_p_client.tex  class_r_p_display_1_1_main_page.tex  class_r_p_display_1_1_message_page.tex  class_r_p_display_node.tex  class_r_p_distance_converter.tex  class_r_p_framing_node.tex  class_r_p_framing_node__coll__graph.md5  class_r_p_head_tracking.tex  class_r_p_head_tracking_node.tex  class_r_p_head_tracking_node__coll__graph.md5  class_r_p_heads_message_builder.tex  class_r_p_k_l_r_classifier_gaussian_kernel.tex  class_r_p_k_l_r_classifier_gaussian_kernel__coll__graph.md5  class_r_p_k_l_r_classifier_kernel.tex  class_r_p_k_l_r_classifier_kernel__inherit__graph.md5  (+23 more)
src/rp_autonomous_photography/: CMakeLists.txt  package.xml
src/rp_autonomous_photography/include/: autonomous_photography.hpp  autonomous_photography_state.h
src/rp_autonomous_photography/launch/: robot_photographer.launch
src/rp_autonomous_photography/src/: autonomous_photography.cpp
src/rp_camera/: CMakeLists.txt  package.xml
src/rp_camera/include/: camera.hpp  gphoto2_handler.hpp  usb_handler.hpp
src/rp_camera/launch/: camera.launch
src/rp_camera/src/: camera.cpp  gphoto2_handler.cpp  usb_handler.cpp
src/rp_camera/srv/: PhotoService.srv
src/rp_camera_calibration/: CMakeLists.txt  package.xml
src/rp_camera_calibration/src/: camera_calibration.cpp
src/rp_display/: CMakeLists.txt  package.xml
src/rp_display/include/: display.hpp
src/rp_display/launch/: display.launch
src/rp_display/src/: display.cpp
src/rp_framing/: CMakeLists.txt  package.xml
src/rp_framing/include/: framing.hpp  framing_status.h
src/rp_framing/launch/: framing.launch
src/rp_framing/msg/: Frame.msg
src/rp_framing/src/: framing.cpp
src/rp_head_tracking/: CMakeLists.txt  package.xml
src/rp_head_tracking/data/: non_skin_histogram.txt  skin_histogram.txt
src/rp_head_tracking/include/: bayesian_skin_classifier.hpp  color_face_detector.hpp  color_image_processor.hpp  constants.hpp  depth_head_detector.hpp  depth_head_tracker.hpp  depth_image_processor.hpp  distance_converter.hpp  head_tracking.hpp  head_tracking_state.h  heads_message_builder.hpp  kernel_logistic_regression_classifier.hpp  kernel_logistic_regression_classifier_kernel.hpp  kernel_logistic_regression_training_point.hpp  mock_head_tracking.hpp  utils.hpp
src/rp_head_tracking/launch/: head_tracking.launch  mock_head_tracking.launch
src/rp_head_tracking/msg/: Heads.msg
src/rp_head_tracking/src/: bayesian_skin_classifier.cpp  color_face_detector.cpp  color_image_processor.cpp  depth_head_detector.cpp  depth_head_tracker.cpp  depth_image_processor.cpp  head_tracking.cpp  heads_message_builder.cpp  kernel_logistic_regression_classifier.cpp  kernel_logistic_regression_classifier_kernel.cpp  mock_head_tracking.cpp
src/rp_locomotion/: CMakeLists.txt  package.xml
src/rp_locomotion/include/: driving_direction.h  locomotion.hpp  locomotion_state.h
src/rp_locomotion/launch/: locomotion.launch
src/rp_locomotion/param/: keyop_smoother.yaml
src/rp_locomotion/src/: locomotion.cpp
src/rp_navigation/: CMakeLists.txt  package.xml
src/rp_navigation/include/: direction_source.h  navigation.hpp
src/rp_navigation/launch/: navigation.launch
src/rp_navigation/src/: navigation.cpp
src/rp_obstacle_avoidance/: CMakeLists.txt  package.xml
src/rp_obstacle_avoidance/include/: obstacle_avoidance.hpp
src/rp_obstacle_avoidance/launch/: obstacle_avoidance.launch
src/rp_obstacle_avoidance/src/: obstacle_avoidance.cpp
src/rp_speech/: CMakeLists.txt  package.xml
src/rp_speech/include/: speech.hpp
src/rp_speech/launch/: speech.launch
src/rp_speech/src/: speech.cpp
src/rp_state_externalization/: CMakeLists.txt  package.xml
src/rp_state_externalization/include/: state_externalization.hpp
src/rp_state_externalization/launch/: state_externalization.launch
src/rp_state_externalization/src/: state_externalization.cpp
src/rp_uploader/: CMakeLists.txt  package.xml
src/rp_uploader/launch/: uploader.launch
src/rp_uploader/scripts/: rp_uploader_node.py
src/rp_uploader/srv/: UploaderService.srv
(+83 files in other folders)
