<?xml version="1.0"?>
<package>
  <name>rp_autonomous_photography</name>
  <version>1.0.0</version>
  <description>Robot Photographer Autonomous Photography Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rp_navigation</build_depend>
  <build_depend>rp_framing</build_depend>
  <build_depend>rp_camera</build_depend>
  <build_depend>rp_uploader</build_depend>
  <build_depend>rp_locomotion</build_depend>
  <build_depend>rp_head_tracking</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rp_navigation</run_depend>
  <run_depend>rp_framing</run_depend>
  <run_depend>rp_camera</run_depend>
  <run_depend>rp_uploader</run_depend>
  <run_depend>rp_locomotion</run_depend>
  <run_depend>rp_head_tracking</run_depend>
  <export/>
</package>
