<?xml version="1.0"?>
<package>
  <name>rp_camera_calibration</name>
  <version>1.0.0</version>
  <description>Robot Photographer Camera Calibration Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>
  <export/>
</package>
