<?xml version="1.0"?>
<package>
  <name>rp_framing</name>
  <version>1.0.0</version>
  <description>Robot Photographer Camera Framing Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rp_head_tracking</build_depend>
  <build_depend>rp_locomotion</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rp_head_tracking</run_depend>
  <run_depend>rp_locomotion</run_depend>
  <run_depend>message_runtime</run_depend>
  <export/>
</package>
