<?xml version="1.0"?>
<package>
  <name>rp_locomotion</name>
  <version>1.0.0</version>
  <description>Robot Photographer Locomotion Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>cmd_vel_mux</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <export/>
</package>
