<?xml version="1.0"?>
<package>
  <name>rp_obstacle_avoidance</name>
  <version>1.0.0</version>
  <description>Robot Photographer Obstacle Avoidance Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rp_locomotion</build_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rp_locomotion</run_depend>
  <export/>
</package>
