<?xml version="1.0"?>
<package>
  <name>rp_speech</name>
  <version>1.0.0</version>
  <description>Robot Photographer Speech Package</description>
  <maintainer email="manfredas@zabarauskas.com">Manfredas Zabarauskas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>espeak</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>espeak</run_depend>
  <export/>
</package>
